# spotify-trainer

./: .cache  pyproject.toml
spotify_trainer.egg-info/: PKG-INFO
src/spotify_trainer/: app.py  gui.py
src/spotify_trainer.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
