[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "spotify-trainer"
version = "0.1.0"
description = "Kurzbeschreibung deines Projekts"
authors = [{ name = "Dein Name", email = "dein@email.de" }]
license = { text = "MIT" }
dependencies = [
    "spotipy",
    "pyqt5"
]

[tool.setuptools]
packages = ["spotify_trainer"]